--- a/index.html
+++ b/index.html
@@ -74,33 +74,38 @@
     .sub-card { padding:6px 10px; border:1px solid #ccc; border-radius:6px; background:#fff; margin-bottom:6px; }
     .row-center { display:flex; flex-direction:column; align-items:center; }
     .row-two { width:100%; display:flex; justify-content:space-between; }
+
+    /* ✅ NEW for 5-player layout */
+    .row-three { width:100%; display:flex; justify-content:space-around; }
+
     .player-block { display:flex; flex-direction:column; align-items:center; }
 
-    /* ✅ REPLACED BLUE CIRCLE WITH PERSON ICON */
-   .player-icon {
-  width:80px;
-  height:80px;
-  border:3px solid #3a52a3;       /* circle outline */
-  border-radius:50%;               /* make it round */
-  display:flex;                    /* center icon */
-  align-items:center;
-  justify-content:center;
-  background-color:white;          /* white background inside circle */
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="%233a52a3"><path d="M12 2a5 5 0 100 10 5 5 0 000-10zm0 12c-4.42 0-8 2.69-8 6v2h16v-2c0-3.31-3.58-6-8-6z"/></svg>');
-  background-repeat:no-repeat;
-  background-position:center;
-  background-size:80%;
-}
+    .player-icon {
+      width:80px;
+      height:80px;
+      border:3px solid #3a52a3;
+      border-radius:50%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background-color:white;
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="%233a52a3"><path d="M12 2a5 5 0 100 10 5 5 0 000-10zm0 12c-4.42 0-8 2.69-8 6v2h16v-2c0-3.31-3.58-6-8-6z"/></svg>');
+      background-repeat:no-repeat;
+      background-position:center;
+      background-size:80%;
+    }
 
-
-    /* ✅ GOALIE ICON */
     .player-icon.goalie {
-  border-color:#f34974; /* goalie outline colour */
- background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="%23f34974"><path d="M12 2a5 5 0 100 10 5 5 0 000-10zm0 12c-4.42 0-8 2.69-8 6v2h16v-2c0-3.31-3.58-6-8-6z"/></svg>');
-}
+      border-color:#f34974;
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="%23f34974"><path d="M12 2a5 5 0 100 10 5 5 0 000-10zm0 12c-4.42 0-8 2.69-8 6v2h16v-2c0-3.31-3.58-6-8-6z"/></svg>');
+    }
 
+    /* ✅ Always center goalies visually */
+    .row-center .goalie, .row-two .goalie, .row-three .goalie {
+      align-self: center;
+    }
 
-    .player-name { margin-top:6px; font-weight:600; }
+    .player-name { margin-top:6px; font-weight:600; text-align:center; }
 
     @media (max-width:640px) {
       .formation-container { flex-direction:column; }
@@ -240,42 +245,119 @@ function generateTeams(){
   if(!navigator.share) document.getElementById("shareTeamsBtn").style.display="none";
 }
 
-function renderTeams(teams, teamSize, subsPerTeam){
-  const teamNames=["The Five-Hole Fiddlers","Goal Diggers","Ball Blazers","Stick Flickers","The Mighty Dangles","Deez Sticks","Floor Fury","The Dirty Dekes","Stickflix and Chill","The Deflectors","Ballz Deep","Just the Tip-Ins","The Slap and Tickles"];
+/* ✅ UPDATED renderTeams() with 5-player layout support */
+function renderTeams(teams, teamSize, subsPerTeam) {
+  const teamNames = [
+    "The Five-Hole Fiddlers","Goal Diggers","Ball Blazers","Stick Flickers",
+    "The Mighty Dangles","Deez Sticks","Floor Fury","The Dirty Dekes",
+    "Stickflix and Chill","The Deflectors","Ballz Deep","Just the Tip-Ins",
+    "The Slap and Tickles"
+  ];
   shuffle(teamNames);
-  const out=document.getElementById("output");
-  out.innerHTML="";
+  const out = document.getElementById("output");
+  out.innerHTML = "";
 
-  teams.forEach((team,i)=>{
-    const displayName=teamNames[i%teamNames.length];
-    let goalie=null;
-    let playersOnly=team.slice();
-    if(playersOnly[0] && playersOnly[0].includes("(G)")){ goalie=playersOnly[0]; playersOnly=playersOnly.slice(1); }
-    const substitutes=subsPerTeam[i]||[];
-    const goalieTop=i%2===0;
-    let topSlot, midLeft, midRight, bottomSlot;
-    if(goalieTop){ topSlot=goalie; midLeft=playersOnly[0]||""; midRight=playersOnly[1]||""; bottomSlot=playersOnly[2]||""; }
-    else { topSlot=playersOnly[0]||""; midLeft=playersOnly[1]||""; midRight=playersOnly[2]||""; bottomSlot=goalie; }
+  teams.forEach((team, i) => {
+    const displayName = teamNames[i % teamNames.length];
+    let goalie = null;
+    let playersOnly = team.slice();
+    if (playersOnly[0] && playersOnly[0].includes("(G)")) {
+      goalie = playersOnly[0];
+      playersOnly = playersOnly.slice(1);
+    }
+    const substitutes = subsPerTeam[i] || [];
+    const goalieTop = i % 2 === 0;
 
-    const cardHtml=`<div class="team">
-      <div class="team-title">${displayName}</div>
-      <div class="formation-container">
-        <div class="formation-layout">
-          ${centeredRow(topSlot)}
-          ${twoAcrossRow(midLeft,midRight)}
-          ${centeredRow(bottomSlot)}
-        </div>
-        <div class="subs-section">
-          <div style="font-weight:bold;text-align:center;margin-bottom:8px;">Subs</div>
-          ${substitutes.length===0?`<div style="text-align:center;">None</div>`:substitutes.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join("")}
-        </div>
-      </div>
-    </div>`;
-    out.insertAdjacentHTML('beforeend',cardHtml);
+    if (teamSize === 3) {
+      let topSlot, midLeft, midRight, bottomSlot;
+      if (goalieTop) {
+        topSlot = goalie;
+        midLeft = playersOnly[0] || "";
+        midRight = playersOnly[1] || "";
+        bottomSlot = playersOnly[2] || "";
+      } else {
+        topSlot = playersOnly[0] || "";
+        midLeft = playersOnly[1] || "";
+        midRight = playersOnly[2] || "";
+        bottomSlot = goalie;
+      }
+
+      const cardHtml = `
+        <div class="team">
+          <div class="team-title">${displayName}</div>
+          <div class="formation-container">
+            <div class="formation-layout">
+              ${centeredRow(topSlot)}
+              ${twoAcrossRow(midLeft, midRight)}
+              ${centeredRow(bottomSlot)}
+            </div>
+            <div class="subs-section">
+              <div style="font-weight:bold;text-align:center;margin-bottom:8px;">Subs</div>
+              ${substitutes.length===0?`<div style="text-align:center;">None</div>`:substitutes.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join("")}
+            </div>
+          </div>
+        </div>`;
+      out.insertAdjacentHTML('beforeend', cardHtml);
+      return;
+    }
+
+    if (teamSize === 5) {
+      const p = [...playersOnly];
+      const g = goalie ? goalie : "";
+
+      let layoutHtml = "";
+
+      if (goalieTop) {
+        layoutHtml = `
+          ${centeredRow(g)}
+          ${twoAcrossRow(p[0], p[1])}
+          ${threeAcrossRow(p[2], p[3], p[4])}
+        `;
+      } else {
+        layoutHtml = `
+          ${threeAcrossRow(p[0], p[1], p[2])}
+          ${twoAcrossRow(p[3], p[4])}
+          ${centeredRow(g)}
+        `;
+      }
+
+      const cardHtml = `
+        <div class="team">
+          <div class="team-title">${displayName}</div>
+          <div class="formation-container">
+            <div class="formation-layout">
+              ${layoutHtml}
+            </div>
+            <div class="subs-section">
+              <div style="font-weight:bold;text-align:center;margin-bottom:8px;">Subs</div>
+              ${substitutes.length===0?`<div style="text-align:center;">None</div>`:substitutes.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join("")}
+            </div>
+          </div>
+        </div>`;
+      out.insertAdjacentHTML('beforeend', cardHtml);
+    }
   });
 }
 
-/* ✅ Inject goalie or normal icon dynamically — minimal change */
+/* ✅ new helper */
+function threeAcrossRow(left, middle, right) {
+  return `
+    <div class="row-three">
+      <div class="player-block">
+        <div class="player-icon${left && left.includes('(G)') ? ' goalie' : ''}"></div>
+        <div class="player-name">${formatPlayer(left)}</div>
+      </div>
+      <div class="player-block">
+        <div class="player-icon${middle && middle.includes('(G)') ? ' goalie' : ''}"></div>
+        <div class="player-name">${formatPlayer(middle)}</div>
+      </div>
+      <div class="player-block">
+        <div class="player-icon${right && right.includes('(G)') ? ' goalie' : ''}"></div>
+        <div class="player-name">${formatPlayer(right)}</div>
+      </div>
+    </div>`;
+}
+
 function centeredRow(player){ 
   return player
     ? `<div class="row-center"><div class="player-icon${player.includes('(G)')?' goalie':''}"></div><div class="player-name">${formatPlayer(player)}</div></div>`
