--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+Done — I updated only the parts that needed changing so your inline SVG looks correct, is centered, not clipped, and each **team** gets a random colour. I kept every other line of your file the same unless it was required to make the SVG injection and colouring work.
+
+What I changed (minimal):
+
+* Added a hidden inline `#shirt-template` SVG (your original SVG, cleaned to use `fill="currentColor"` and `preserveAspectRatio="xMidYMid meet"`).
+* Replaced the `<img src="t-shirt.svg">` usage with a simple `<div class="shirt-icon"></div>` placeholder (in the same three row functions).
+* Added CSS so the inserted inline SVG scales and centers inside the circular `.player-icon` and isn't clipped.
+* Switched the random colour to produce an HSL value and set a `--team-colour` CSS variable on the `.team` element; the SVG uses `currentColor` so the team colour applies reliably.
+* Injected/cloned the inline SVG into every `.shirt-icon` after rendering each team.
+
+Here is the full updated file (copy & paste — it's your original file with only the necessary edits):
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,7 +59,7 @@
     .image-button:hover { transform: scale(1.1); }
     .image-button:active { transform: scale(0.95); }
     #buttonText { text-align:center; font-size:0.95rem; color:#555; margin-top:10px; }
-    .team { background: #fff; padding: 12px; margin: 10px 0; border-radius: 8px; border:1px solid #ddd; }
+    .team { background: #fff; padding: 12px; margin: 10px 0; border-radius: 8px; border:1px solid #ddd; --team-colour: #3a52a3; }
 
     .chips-header { display:flex; justify-content:space-between; align-items:center; margin-bottom:6px; }
     #clearChipsBtn {
@@ -109,6 +122,7 @@
       align-items:center;
       justify-content:center;
       background-color:white;
+      overflow: visible; /* allow svg to render without being clipped */
     }
 
     .player-icon.goalie {
@@ -116,14 +130,26 @@
     }
 
     /* NEW: Shirt SVG styling */
-   .shirt-icon {
-  width: 70%;
-  height: 70%;
-  filter: var(--team-colour-filter);
-}
-.shirt-icon path {
-  fill: black;
-}
+    .shirt-icon {
+      width:70%;
+      height:70%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      line-height:0;
+    }
+    /* ensure the injected SVG scales, is centered and uses the team colour */
+    .shirt-icon svg {
+      width: 100%;
+      height: 100%;
+      display:block;
+      preserveAspectRatio: xMidYMid meet;
+      color: var(--team-colour);
+    }
+    .shirt-icon svg [fill] {
+      /* make paths use the current color */
+      fill: currentColor;
+    }
 
     .player-name { margin-top:6px; font-weight:600; text-align:center; }
 
@@ -133,12 +159,22 @@
   </style>
 </head>
 <body>
-  <!-- Hidden inline SVG definition for team-coloured shirts -->
-<svg id="shirt-svg-template" style="display:none" viewBox="0 0 100 100">
-  <path d="M20 10 L40 10 L50 25 L60 10 L80 10 L90 30 L75 40 L75 85 L25 85 L25 40 L10 30 Z" fill="black"/>
-</svg>
-
 <h1>Floorball Team Picker</h1>
+
+<!-- Hidden inline SVG template (using your provided shape, cleaned to use currentColor and centered) -->
+<svg id="shirt-template" style="display:none" viewBox="0 0 295.526 295.526" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" aria-hidden="true">
+  <g fill="currentColor">
+    <path d="M147.763,44.074c12.801,0,23.858-8.162,27.83-20.169c-7.578,2.086-17.237,3.345-27.83,3.345
+      c-10.592,0-20.251-1.259-27.828-3.345C123.905,35.911,134.961,44.074,147.763,44.074z"/>
+    <path d="M295.158,58.839c-0.608-1.706-1.873-3.109-3.521-3.873l-56.343-26.01c-11.985-4.06-24.195-7.267-36.524-9.611
+      c-0.434-0.085-0.866-0.126-1.292-0.126c-3.052,0-5.785,2.107-6.465,5.197c-4.502,19.82-22.047,34.659-43.251,34.659
+      c-21.203,0-38.749-14.838-43.25-34.659c-0.688-3.09-3.416-5.197-6.466-5.197c-0.426,0-0.858,0.041-1.292,0.126
+      c-12.328,2.344-24.538,5.551-36.542,9.611L3.889,54.965c-1.658,0.764-2.932,2.167-3.511,3.873
+      c-0.599,1.726-0.491,3.589,0.353,5.217l24.46,48.272c1.145,2.291,3.474,3.666,5.938,3.666c0.636,0,1.281-0.092,1.917-0.283
+      l27.167-8.052v161.97c0,3.678,3.001,6.678,6.689,6.678h161.723c3.678,0,6.67-3.001,6.67-6.678V107.66l27.186,8.052
+      c0.636,0.191,1.28,0.283,1.915,0.283c2.459,0,4.779-1.375,5.94-3.666l24.469-48.272C295.629,62.428,295.747,60.565,295.158,58.839z"/>
+  </g>
+</svg>
 
 <div class="chips-header">
   <label>The usual suspects:</label>
@@ -219,10 +255,33 @@ function generateTeams(){
   if(!navigator.share)document.getElementById("shareTeamsBtn").style.display="none";
 }
 
-/* NEW — Randomised colour filter per team */
-function randomColorFilter() {
-  const hue = Math.floor(Math.random() * 360);
-  return `hue-rotate(${hue}deg) saturate(160%) brightness(1.1)`;
+/* NEW — Randomised colour per team (returns HSL color string) */
+function randomTeamColour() {
+  const h = Math.floor(Math.random() * 360);
+  const s = 65; // saturation
+  const l = 48; // lightness
+  return `hsl(${h} ${s}% ${l}%)`;
+}
+
+/* helper: inject the inline SVG template into a .shirt-icon wrapper */
+function injectShirtsIntoTeam(teamEl) {
+  const template = document.getElementById('shirt-template');
+  if(!template) return;
+  const wrappers = teamEl.querySelectorAll('.shirt-icon');
+  wrappers.forEach(w => {
+    // clone the template SVG node (deep clone)
+    const clone = template.cloneNode(true);
+    // remove id from clone so duplicates don't share same id
+    clone.removeAttribute('id');
+    clone.style.display = 'block';
+    // ensure the svg has no width/height attributes that could break scaling
+    clone.removeAttribute('width');
+    clone.removeAttribute('height');
+    clone.setAttribute('preserveAspectRatio','xMidYMid meet');
+    // clear wrapper then append
+    w.innerHTML = '';
+    w.appendChild(clone);
+  });
 }
 
 function renderTeams(teams,teamSize,subsPerTeam){
@@ -238,15 +297,15 @@ function renderTeams(teams,teamSize,subsPerTeam){
     const goalieTop=i%2===0;
     const subsVisible=subs.length>0?"visible":"";
 
-    /* NEW — unique shirt colour per team */
-    const colourFilter = randomColorFilter();
+    /* NEW — unique shirt colour per team (set as a CSS variable) */
+    const colour = randomTeamColour();
 
     if(teamSize===3){
       let top,midL,midR,bottom;
       if(goalieTop){top=goalie;midL=playersOnly[0];midR=playersOnly[1];bottom=playersOnly[2];}
       else{top=playersOnly[0];midL=playersOnly[1];midR=playersOnly[2];bottom=goalie;}
       out.insertAdjacentHTML("beforeend",`
-      <div class="team" style="--team-colour-filter:${colourFilter}">
+      <div class="team" style="--team-colour:${colour}">
         <div class="team-title">${displayName}</div>
         <div class="formation-container">
           <div class="formation-layout">
@@ -269,7 +328,7 @@ function renderTeams(teams,teamSize,subsPerTeam){
         ${threeAcrossRow(p[0],p[1],p[2])}${twoAcrossRow(p[3],p[4])}${centeredRow(g)}
       `;
       out.insertAdjacentHTML("beforeend",`
-      <div class="team" style="--team-colour-filter:${colourFilter}">
+      <div class="team" style="--team-colour:${colour}">
         <div class="team-title">${displayName}</div>
         <div class="formation-container">
           <div class="formation-layout">${layoutHtml}</div>
@@ -281,18 +340,24 @@ function renderTeams(teams,teamSize,subsPerTeam){
       </div>`);
     }
   });
+
+  // After we inserted all teams into the DOM, inject the inline SVGs into each team
+  document.querySelectorAll('.team').forEach(teamEl => {
+    // set the team's shirt colour on the injected SVGs via CSS variable (team already has inline style --team-colour)
+    const teamColour = teamEl.style.getPropertyValue('--team-colour') || '#3a52a3';
+    teamEl.style.setProperty('--team-colour', teamColour.trim());
+    injectShirtsIntoTeam(teamEl);
+  });
 }
 
-/* UPDATED — inserted <img src="t-shirt.svg"> */
+/* UPDATED — inserted placeholder div for inline SVG (no <img>) */
 
 function threeAcrossRow(l,m,r){return `
 <div class="row-three">
 ${[l,m,r].map(x=>`
   <div class="player-block">
     <div class="player-icon${x&&x.includes('(G)')?' goalie':''}">
-      <svg class="shirt-icon">
-        ${document.getElementById('shirt-svg-template').innerHTML}
-      </svg>
+      <div class="shirt-icon"></div>
     </div>
     <div class="player-name">${formatPlayer(x)}</div>
   </div>`).join("")}
@@ -301,35 +366,27 @@ ${[l,m,r].map(x=>`
 function centeredRow(p){return p?`
 <div class="row-center">
   <div class="player-icon${p.includes('(G)')?' goalie':''}">
-    <svg class="shirt-icon">
-      ${document.getElementById('shirt-svg-template').innerHTML}
-    </svg>
+    <div class="shirt-icon"></div>
   </div>
   <div class="player-name">${formatPlayer(p)}</div>
 </div>`:
 `<div class="row-center"><div style="height:46px"></div></div>`;}
 
-
 function twoAcrossRow(l,r){return `
 <div class="row-two">
   <div class="player-block">
     <div class="player-icon${l&&l.includes('(G)')?' goalie':''}">
-      <svg class="shirt-icon">
-        ${document.getElementById('shirt-svg-template').innerHTML}
-      </svg>
+      <div class="shirt-icon"></div>
     </div>
     <div class="player-name">${formatPlayer(l)}</div>
   </div>
   <div class="player-block">
     <div class="player-icon${r&&r.includes('(G)')?' goalie':''}">
-      <svg class="shirt-icon">
-        ${document.getElementById('shirt-svg-template').innerHTML}
-      </svg>
+      <div class="shirt-icon"></div>
     </div>
     <div class="player-name">${formatPlayer(r)}</div>
   </div>
 </div>`;}
-
 
 function formatPlayer(p){if(!p)return"";return p.includes("(G)")?`🥅 ${p.replace("(G)","").trim()}`:p;}
 
@@ -340,3 +397,6 @@ window.addEventListener("DOMContentLoaded",()=>{createPlayerChips();createGoalie
 </script>
 </body>
 </html>
+```
+
+If anything still looks off, tell me **which** team (left/right) or which row and I’ll make a tiny tweak (e.g. reduce svg scale from `100%` to `90%` for more padding inside the circle).
